www/css/fpp.css
/* ... */
[data-bs-theme='light'] .nav-open #fppMenuList > li.active > a {
	color: #363636;
}

#rebootShutdown > button,
#rebootShutdown > .dropdown,
#rebootShutdown > .dropup {
	display: inline-block;
}

.dropdown-menu {
	padding-left: 0.3125rem;
	padding-right: 0.3125rem;
}

.dropdown-menu button.dropdown-item {
	width: 100%;
	margin: 0;
}

#fppModeDropdownButton {
	font-weight: normal;
	font-size: 0.9rem;
}

#fppModeDropdownButton::after {
	border-top: 0.3em solid;
	border-right: 0.3em solid transparent;
	border-bottom: 0;
	border-left: 0.3em solid transparent;
}

#fppModeDropdownButtonModeText {
	font-weight: bold;
	font-size: 0.95rem;
	text-transform: capitalize;
}

#fppMenu .dropdown:after {
	-webkit-transform: rotate(0deg);
	-moz-transform: rotate(0deg);
	-o-transform: rotate(0deg);
	-ms-transform: rotate(0deg);
	transform: rotate(0deg);
	-webkit-transition: transform 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
	-moz-transition: transform 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
	-o-transition: transform 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
	-ms-transition: transform 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
	transition: transform 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
}

#fppMenu .dropdown.show > .dropdown-toggle:after,
#fppMenu .dropdown > .dropdown-toggle.show:after {
	-webkit-transform: rotate(180deg);
	-moz-transform: rotate(180deg);
	-o-transform: rotate(180deg);
	-ms-transform: rotate(180deg);
	transform: rotate(180deg);
	-webkit-transition: transform 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
	-moz-transition: transform 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
	-o-transition: transform 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
	-ms-transition: transform 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
	transition: transform 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
}

#fppMenu .dropdown-menu {
	display: none;
	padding: 0.3125rem 0;
	border: 0;
	opacity: 0;
	transform: scale(0);
	transform-origin: 0 0;
	will-change: transform, opacity;
	transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1),
		opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1);
	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
	top: 40px;
}

#fppMenu .dropdown-menu.show {
	animation-name: dropdown-animation;
	animation-duration: 0.3s;
	animation-fill-mode: forwards;
	animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}

#fppMenu .open > .dropdown-menu,
#fppMenu .dropdown-menu.show {
	display: block;
	opacity: 1;
	transform: scale(1);
}

#fppMenu .dropdown-menu.hiding {
	display: block;
	opacity: 0;
	transform: scale(0);
}

#fppMenu .dropdown-menu[x-placement='bottom-start'] {
	transform-origin: 0 0;
}

#fppMenu .dropdown-menu[x-placement='bottom-end'] {
	transform-origin: 100% 0;
}

#fppMenu .dropdown-menu[x-placement='top-start'] {
	transform-origin: 0 100%;
}

#fppMenu .dropdown-menu[x-placement='top-end'] {
	transform-origin: 100% 100%;
}

[data-bs-theme='light'] #fppMenu .dropdown-menu .disabled > a {
	color: #777;
}

[data-bs-theme='light'] #fppMenu .dropdown-menu .disabled > a:focus,
[data-bs-theme='light'] #fppMenu .dropdown-menu .disabled > a:hover {
	color: #777;
}

#fppMenu .dropdown-menu .disabled > a:focus,
#fppMenu .dropdown-menu .disabled > a:hover {
	text-decoration: none;
	background-color: transparent;
	background-image: none;
}

#fppMenu .dropdown-menu.dropdown-with-icons .dropdown-item {
	padding: 0.75rem 1.25rem 0.75rem 0.75rem;
}

#fppMenu .dropdown-item svg,
.dropdown-item .fas {
	width: 20px;
	display: inline-block;
	text-align: center;
	padding-right: 4px;
}

#fppMenu .dropdown-menu.dropdown-with-icons .dropdown-item .material-icons {
	vertical-align: middle;
	font-size: 24px;
	position: relative;
	margin-top: -4px;
	top: 1px;
	margin-right: 12px;
	opacity: 0.5;
}

#fppMenu .dropdown-menu .dropdown-item,
#fppMenu .dropdown-menu li > a {
	position: relative;
	width: auto;
	display: flex;
	flex-flow: nowrap;
	align-items: center;
	text-decoration: none;
	font-size: 0.9rem;
	border-radius: 5px;
	margin: 0 0.3125rem;
	-webkit-transition: all 150ms linear;
	-moz-transition: all 150ms linear;
	-o-transition: all 150ms linear;
	-ms-transition: all 150ms linear;
	transition: all 150ms linear;
	min-width: 7rem;
	padding: 0.625rem 1.25rem;
	overflow: hidden;
	line-height: 1.428571;
	text-overflow: ellipsis;
	word-wrap: break-word;
}

[data-bs-theme='light'] #fppMenu .dropdown-menu .dropdown-item,
[data-bs-theme='light'] #fppMenu .dropdown-menu li > a {
	color: #333;
}

.dropdown-menu .dropdown-item {
	border-radius: 5px;
}

.dropdown-menu .dropdown-item:hover,
.dropdown-menu .dropdown-item:focus,
.dropdown-menu .dropdown-item:active,
.dropdown-menu a:active,
.dropdown-menu a.active,
.dropdown-menu a:hover,
.dropdown-menu a:focus,
.dropdown-menu a:active {
	box-shadow: 0 4px 5px 0px rgba(0, 0, 0, 0.14),
		0 7px 10px -5px rgba(156, 39, 176, 0.4);
	background-color: var(--bs-danger);
	color: #fff !important;
}

.nav-link {
	text-decoration: none;
	padding: 0.6rem 1em;
}

.nav-pills li {
	margin-top: 0.2em;
	text-align: center;
}

#scrollTopButton {
	display: none;
	position: fixed;
	top: 72px;
	right: 5px;
	z-index: 9999;
	background-color: red;
	color: white;
}

#scrollTopButton:hover {
	background-color: #555;
}

.scrollTopButtonHidden {
	display: none;
}

.scrollTopButtonShowing {
	display: block !important;
}

.navbar-toggler {
	padding: 0.25rem 0.75rem;
	font-size: 1.25rem;
	line-height: 1;
	background-color: transparent;
	border: 0px solid transparent;
	border-radius: 0.25rem;
}

.navbar-toggler:hover,
.navbar-toggler:focus {
	text-decoration: none;
}

.navbar-toggler:not(:disabled):not(.disabled) {
	cursor: pointer;
}

.navbar-toggler-icon {
	display: inline-block;
	width: 1.5em;
	height: 1.5em;
	vertical-align: middle;
	content: '';
	background: no-repeat center center;
	background-size: 100% 100%;
}
/* ... */

